<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.openjiuwen</groupId>
    <artifactId>agent-runtime-java</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>agent-runtime-java</name>
    <description>Agent Runtime Java - A2A Service and Agent Service Adapters</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <modules>
        <module>service</module>
    </modules>

    <properties>
        <revision>0.1.0</revision>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <a2a-sdk.version>1.0.0.Final</a2a-sdk.version>
        <agent-core.version>0.1.12</agent-core.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- A2A SDK (v1.0.0.Final: groupId changed from io.github.a2asdk to org.a2aproject.sdk) -->
            <dependency>
                <groupId>org.a2aproject.sdk</groupId>
                <artifactId>a2a-java-sdk-spec</artifactId>
                <version>${a2a-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.a2aproject.sdk</groupId>
                <artifactId>a2a-java-sdk-server-common</artifactId>
                <version>${a2a-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.a2aproject.sdk</groupId>
                <artifactId>a2a-java-sdk-jsonrpc-common</artifactId>
                <version>${a2a-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.a2aproject.sdk</groupId>
                <artifactId>a2a-java-sdk-client</artifactId>
                <version>${a2a-sdk.version}</version>
            </dependency>

            <!-- OpenJiuwen Agent Core -->
            <dependency>
                <groupId>com.openjiuwen</groupId>
                <artifactId>agent-core-java</artifactId>
                <version>${agent-core.version}</version>
            </dependency>

            <!-- ② Service leaf modules -->
            <dependency>
                <groupId>com.openjiuwen</groupId>
                <artifactId>agent-service-spec</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openjiuwen</groupId>
                <artifactId>agent-service-adapters-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openjiuwen</groupId>
                <artifactId>agent-service-adapters-agentcore</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openjiuwen</groupId>
                <artifactId>agent-service-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Protobuf - 统一版本，解决 SDK 内部 protobuf-java 4.33.1 与 protobuf-java-util 4.32.1 不一致的问题 -->
            <!-- Gson - SDK 的 JSONRPCUtils 需要 2.11.0+（setStrictness API） -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.11.0</version>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>4.33.2</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>4.33.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!--
              Required companion for the ${revision} CI-friendly version above: without it the installed/packaged
              POMs keep the literal ${revision} and are unresolvable by downstream consumers. Bound to
              process-resources so it runs under any command that reaches package/install/deploy (no build-command
              change needed). resolveCiFriendliesOnly only rewrites ${revision}/${sha1}/${changelist}.
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
